--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ hs_err_pid*
 /target/surefire-reports/TEST-[2].xml
 /target/surefire-reports/[2].txt
 /target/surefire-reports/TEST-[2].xml
+/target/surefire-reports/*.txt
+/target/*
