--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.11</version>
+            <version>6.9.8</version>
         </dependency>
 
     </dependencies>
@@ -74,6 +74,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <aspectj.version>1.8.10</aspectj.version>
+        <parallel>classes</parallel>
+        <count>4</count>
     </properties>
 
     <build>
@@ -81,7 +83,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.7.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -90,14 +92,26 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.20.1</version>
                 <configuration>
-                    <parallel>classes</parallel>
-                    <threadCount>5</threadCount>
+                    <threadCount>${count}</threadCount>
+                    <parallel>${parallel}</parallel>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng1.xml</suiteXmlFile>
+                        <suiteXmlFile>testng2.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                     <argLine>
                          -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                     <properties>
+                        <property>
+                            <name>suitethreadpoolsize</name>
+                            <value>4</value>
+                        </property>
+                        <property>
+                            <name>usedefaultlisteners</name>
+                            <value>false</value>
+                        </property>
                         <property>
                             <name>listener</name>
                             <value>io.qameta.allure.testng.AllureTestNg</value>
