--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>firstproj</groupId>
-    <artifactId>veryfirst</artifactId>
+    <artifactId>paralleltests</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <!--<reporting>-->
@@ -78,6 +78,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <aspectj.version>1.8.10</aspectj.version>
+        <allure.results.directory>
+            ${project.build.directory}/allure-results
+        </allure.results.directory>
     </properties>
 
     <build>
@@ -129,6 +132,9 @@
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
+                <configuration>
+                    <resultsDirectory>${allure.results.directory}</resultsDirectory>
+                </configuration>
                 <version>2.8</version>
             </plugin>
         </plugins>
