Added rerun tests in surefire don't need Rule anymore

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
+                    <rerunFailingTestsCount>1</rerunFailingTestsCount>
                     <parallel>classes</parallel>
                     <threadCount>5</threadCount>
                     <argLine>
